# linc

./: .env.example  .gitignore  README.md  install_dataset.ps1  install_dataset.sh  pyproject.toml  run_experiments.sh
linc/: __init__.py  custom_types.py  dataset.py  dspy_utils.py  lm.py  logic.py  models.py  pred_types.py  tests.py  utils.py
